fix nums item alignent - about page

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -72,7 +72,7 @@
 .aboutNum__item {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 	box-sizing: border-box;
 	width: 50%;
 	padding: 8% 4%;
@@ -205,7 +205,6 @@
 	}	
 	.aboutNum__item {
 		padding: 5% 5%;
-		justify-content: flex-start;
 	}
 	.about__num {
 		margin: 0 5% 0 0;
